Bug 253043 - Digikam requires both SQlite and MySql [patch]
Summary: Digikam requires both SQlite and MySql [patch]
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Setup-Database (other bugs)
Version First Reported In: 1.4.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-02 19:10 UTC by pochini
Modified: 2017-07-25 10:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments
fixes "if (!sqlite || !mysql) barf();" (565 bytes, patch)
2010-10-02 19:10 UTC, pochini
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pochini 2010-10-02 19:10:04 UTC
Created attachment 52171 [details]
fixes "if (!sqlite || !mysql) barf();"

Version:           1.4.0 (using KDE 4.3.3) 
OS:                Linux

It complains "Run-time Qt4 SQLite or MySQL database plugin is not available" and it exits.

Reproducible: Always

Steps to Reproduce:
Just run digikam.


Expected Results:  
AFAICS Digikam needs SQlite or MySql, not both at the same time.

The attached patch fixes the bug.
Comment 1 Marcel Wiesweg 2010-10-03 16:43:30 UTC
SVN commit 1182157 by mwiesweg:

Apply patch by pochini@shiny.it: require only one db driver
(not tested the implications when only MySQL is available
and not SQLite3)

BUG: 253043

 M  +2 -1      NEWS  
 M  +1 -1      digikam/main.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1182157