Apply patch by pochini@shiny.it: require only one db driver (not tested the implications when only MySQL is available and not SQLite3)

BUG: 253043

svn path=/trunk/extragear/graphics/digikam/; revision=1182157